[package]
name = "rescribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal document conversion library with fidelity tracking"
keywords = ["document", "conversion", "pandoc", "markdown", "html"]
categories = ["text-processing", "parser-implementations"]

[features]
default = ["std", "format-markdown", "format-html"]

# Node definition crates (not language features — no format- prefix)
std = ["dep:rescribe-std"]
math = ["dep:rescribe-math"]

# Granular read/write features, one per format.
# Use format-{fmt} to enable both directions at once.
read-ansi = ["dep:rescribe-read-ansi"]
write-ansi = ["dep:rescribe-write-ansi"]
format-ansi = ["read-ansi", "write-ansi"]

read-asciidoc = ["dep:rescribe-read-asciidoc"]
write-asciidoc = ["dep:rescribe-write-asciidoc"]
format-asciidoc = ["read-asciidoc", "write-asciidoc"]

read-bbcode = ["dep:rescribe-read-bbcode"]
write-bbcode = ["dep:rescribe-write-bbcode"]
format-bbcode = ["read-bbcode", "write-bbcode"]

read-biblatex = ["dep:rescribe-read-biblatex"]
write-biblatex = ["dep:rescribe-write-biblatex"]
format-biblatex = ["read-biblatex", "write-biblatex"]

read-bibtex = ["dep:rescribe-read-bibtex"]
write-bibtex = ["dep:rescribe-write-bibtex"]
format-bibtex = ["read-bibtex", "write-bibtex"]

write-beamer = ["dep:rescribe-write-beamer"]
format-beamer = ["write-beamer"]

write-chunkedhtml = ["dep:rescribe-write-chunkedhtml"]
format-chunkedhtml = ["write-chunkedhtml"]

read-commonmark = ["dep:rescribe-read-commonmark"]
write-commonmark = ["dep:rescribe-write-commonmark"]
format-commonmark = ["read-commonmark", "write-commonmark"]

write-context = ["dep:rescribe-write-context"]
format-context = ["write-context"]

read-creole = ["dep:rescribe-read-creole"]
write-creole = ["dep:rescribe-write-creole"]
format-creole = ["read-creole", "write-creole"]

read-csl-json = ["dep:rescribe-read-csl-json"]
write-csl-json = ["dep:rescribe-write-csl-json"]
format-csl-json = ["read-csl-json", "write-csl-json"]

read-csv = ["dep:rescribe-read-csv"]
write-csv = ["dep:rescribe-write-csv"]
format-csv = ["read-csv", "write-csv"]

read-djot = ["dep:rescribe-read-djot"]
write-djot = ["dep:rescribe-write-djot"]
format-djot = ["read-djot", "write-djot"]

read-docbook = ["dep:rescribe-read-docbook"]
write-docbook = ["dep:rescribe-write-docbook"]
format-docbook = ["read-docbook", "write-docbook"]

read-docx = ["dep:rescribe-read-docx"]
write-docx = ["dep:rescribe-write-docx"]
format-docx = ["read-docx", "write-docx"]

read-dokuwiki = ["dep:rescribe-read-dokuwiki"]
write-dokuwiki = ["dep:rescribe-write-dokuwiki"]
format-dokuwiki = ["read-dokuwiki", "write-dokuwiki"]

write-dzslides = ["dep:rescribe-write-dzslides"]
format-dzslides = ["write-dzslides"]

read-endnotexml = ["dep:rescribe-read-endnotexml"]
write-endnotexml = ["dep:rescribe-write-endnotexml"]
format-endnotexml = ["read-endnotexml", "write-endnotexml"]

read-epub = ["dep:rescribe-read-epub"]
write-epub = ["dep:rescribe-write-epub"]
format-epub = ["read-epub", "write-epub"]

read-fb2 = ["dep:rescribe-read-fb2"]
write-fb2 = ["dep:rescribe-write-fb2"]
format-fb2 = ["read-fb2", "write-fb2"]

read-fountain = ["dep:rescribe-read-fountain"]
write-fountain = ["dep:rescribe-write-fountain"]
format-fountain = ["read-fountain", "write-fountain"]

read-gfm = ["dep:rescribe-read-gfm"]
write-gfm = ["dep:rescribe-write-gfm"]
format-gfm = ["read-gfm", "write-gfm"]

read-haddock = ["dep:rescribe-read-haddock"]
write-haddock = ["dep:rescribe-write-haddock"]
format-haddock = ["read-haddock", "write-haddock"]

read-html = ["dep:rescribe-read-html"]
write-html = ["dep:rescribe-write-html"]
format-html = ["read-html", "write-html"]

write-icml = ["dep:rescribe-write-icml"]
format-icml = ["write-icml"]

read-ipynb = ["dep:rescribe-read-ipynb"]
write-ipynb = ["dep:rescribe-write-ipynb"]
format-ipynb = ["read-ipynb", "write-ipynb"]

read-jats = ["dep:rescribe-read-jats"]
write-jats = ["dep:rescribe-write-jats"]
format-jats = ["read-jats", "write-jats"]

read-jira = ["dep:rescribe-read-jira"]
write-jira = ["dep:rescribe-write-jira"]
format-jira = ["read-jira", "write-jira"]

read-latex = ["dep:rescribe-read-latex"]
write-latex = ["dep:rescribe-write-latex"]
format-latex = ["read-latex", "write-latex"]

read-man = ["dep:rescribe-read-man"]
write-man = ["dep:rescribe-write-man"]
format-man = ["read-man", "write-man"]

read-markdown = ["dep:rescribe-read-markdown"]
write-markdown = ["dep:rescribe-write-markdown"]
format-markdown = ["read-markdown", "write-markdown"]

read-markdown-strict = ["dep:rescribe-read-markdown-strict"]
write-markdown-strict = ["dep:rescribe-write-markdown-strict"]
format-markdown-strict = ["read-markdown-strict", "write-markdown-strict"]

read-markua = ["dep:rescribe-read-markua"]
write-markua = ["dep:rescribe-write-markua"]
format-markua = ["read-markua", "write-markua"]

read-mediawiki = ["dep:rescribe-read-mediawiki"]
write-mediawiki = ["dep:rescribe-write-mediawiki"]
format-mediawiki = ["read-mediawiki", "write-mediawiki"]

write-ms = ["dep:rescribe-write-ms"]
format-ms = ["write-ms"]

read-multimarkdown = ["dep:rescribe-read-multimarkdown"]
write-multimarkdown = ["dep:rescribe-write-multimarkdown"]
format-multimarkdown = ["read-multimarkdown", "write-multimarkdown"]

read-muse = ["dep:rescribe-read-muse"]
write-muse = ["dep:rescribe-write-muse"]
format-muse = ["read-muse", "write-muse"]

read-native = ["dep:rescribe-read-native"]
write-native = ["dep:rescribe-write-native"]
format-native = ["read-native", "write-native"]

read-odt = ["dep:rescribe-read-odt"]
write-odt = ["dep:rescribe-write-odt"]
format-odt = ["read-odt", "write-odt"]

read-opml = ["dep:rescribe-read-opml"]
write-opml = ["dep:rescribe-write-opml"]
format-opml = ["read-opml", "write-opml"]

read-org = ["dep:rescribe-read-org"]
write-org = ["dep:rescribe-write-org"]
format-org = ["read-org", "write-org"]

read-pandoc-json = ["dep:rescribe-read-pandoc-json"]
write-pandoc-json = ["dep:rescribe-write-pandoc-json"]
format-pandoc-json = ["read-pandoc-json", "write-pandoc-json"]

read-pdf = ["dep:rescribe-read-pdf"]
format-pdf = ["read-pdf"]

write-plaintext = ["dep:rescribe-write-plaintext"]
format-plaintext = ["write-plaintext"]

read-pod = ["dep:rescribe-read-pod"]
write-pod = ["dep:rescribe-write-pod"]
format-pod = ["read-pod", "write-pod"]

read-pptx = ["dep:rescribe-read-pptx"]
write-pptx = ["dep:rescribe-write-pptx"]
format-pptx = ["read-pptx", "write-pptx"]

write-revealjs = ["dep:rescribe-write-revealjs"]
format-revealjs = ["write-revealjs"]

read-ris = ["dep:rescribe-read-ris"]
write-ris = ["dep:rescribe-write-ris"]
format-ris = ["read-ris", "write-ris"]

read-rst = ["dep:rescribe-read-rst"]
write-rst = ["dep:rescribe-write-rst"]
format-rst = ["read-rst", "write-rst"]

read-rtf = ["dep:rescribe-read-rtf"]
write-rtf = ["dep:rescribe-write-rtf"]
format-rtf = ["read-rtf", "write-rtf"]

write-s5 = ["dep:rescribe-write-s5"]
format-s5 = ["write-s5"]

write-slidy = ["dep:rescribe-write-slidy"]
format-slidy = ["write-slidy"]

write-slideous = ["dep:rescribe-write-slideous"]
format-slideous = ["write-slideous"]

read-t2t = ["dep:rescribe-read-t2t"]
write-t2t = ["dep:rescribe-write-t2t"]
format-t2t = ["read-t2t", "write-t2t"]

read-tei = ["dep:rescribe-read-tei"]
write-tei = ["dep:rescribe-write-tei"]
format-tei = ["read-tei", "write-tei"]

read-texinfo = ["dep:rescribe-read-texinfo"]
write-texinfo = ["dep:rescribe-write-texinfo"]
format-texinfo = ["read-texinfo", "write-texinfo"]

read-textile = ["dep:rescribe-read-textile"]
write-textile = ["dep:rescribe-write-textile"]
format-textile = ["read-textile", "write-textile"]

read-tikiwiki = ["dep:rescribe-read-tikiwiki"]
write-tikiwiki = ["dep:rescribe-write-tikiwiki"]
format-tikiwiki = ["read-tikiwiki", "write-tikiwiki"]

read-tsv = ["dep:rescribe-read-tsv"]
write-tsv = ["dep:rescribe-write-tsv"]
format-tsv = ["read-tsv", "write-tsv"]

read-twiki = ["dep:rescribe-read-twiki"]
write-twiki = ["dep:rescribe-write-twiki"]
format-twiki = ["read-twiki", "write-twiki"]

read-typst = ["dep:rescribe-read-typst"]
write-typst = ["dep:rescribe-write-typst"]
format-typst = ["read-typst", "write-typst"]

read-vimwiki = ["dep:rescribe-read-vimwiki"]
write-vimwiki = ["dep:rescribe-write-vimwiki"]
format-vimwiki = ["read-vimwiki", "write-vimwiki"]

read-xlsx = ["dep:rescribe-read-xlsx"]
write-xlsx = ["dep:rescribe-write-xlsx"]
format-xlsx = ["read-xlsx", "write-xlsx"]

read-xwiki = ["dep:rescribe-read-xwiki"]
write-xwiki = ["dep:rescribe-write-xwiki"]
format-xwiki = ["read-xwiki", "write-xwiki"]

read-zimwiki = ["dep:rescribe-read-zimwiki"]
write-zimwiki = ["dep:rescribe-write-zimwiki"]
format-zimwiki = ["read-zimwiki", "write-zimwiki"]

# Format groups — non-disjoint; a format may appear in multiple groups.
# `all` is defined as the union of all groups, so coverage is self-verifying.

# Lightweight human-written markup languages.
formats-markup = [
    "format-asciidoc", "format-commonmark", "format-djot", "format-fountain",
    "format-gfm", "format-man", "format-markdown", "format-markdown-strict",
    "format-markua", "format-multimarkdown", "format-muse", "format-org",
    "format-pod", "format-rst", "format-t2t", "format-textile",
]

# Wiki and community markup dialects.
formats-wiki = [
    "format-bbcode", "format-creole", "format-dokuwiki", "format-haddock",
    "format-jira", "format-mediawiki", "format-muse", "format-tikiwiki",
    "format-twiki", "format-vimwiki", "format-xwiki", "format-zimwiki",
]

# Rich/structured document formats (office, XML, binary).
formats-document = [
    "format-docbook", "format-docx", "format-epub", "format-fb2",
    "format-html", "format-ipynb", "format-jats", "format-odt",
    "format-opml", "format-pdf", "format-rtf", "format-tei",
]

# Tabular / spreadsheet formats.
formats-spreadsheet = [
    "format-csv", "format-tsv", "format-xlsx",
]

# Presentation / slideshow formats.
formats-presentation = [
    "format-beamer", "format-dzslides", "format-pptx", "format-revealjs",
    "format-s5", "format-slidy", "format-slideous",
]

# Typesetting and publishing formats.
formats-typesetting = [
    "format-beamer", "format-context", "format-icml", "format-latex",
    "format-ms", "format-texinfo", "format-typst",
]

# Bibliographic reference formats.
formats-bibliography = [
    "format-biblatex", "format-bibtex", "format-csl-json",
    "format-endnotexml", "format-ris",
]

# Formats that don't fit neatly into the above groups.
formats-other = [
    "format-ansi", "format-chunkedhtml", "format-native",
    "format-pandoc-json", "format-plaintext",
]

# All formats — union of all group features.
all = [
    "std", "math",
    "formats-markup", "formats-wiki", "formats-document",
    "formats-spreadsheet", "formats-presentation", "formats-typesetting",
    "formats-bibliography", "formats-other",
]

[dependencies]
# Core is always included
rescribe-core = { workspace = true }

# Node definitions (optional)
rescribe-std = { workspace = true, optional = true }
rescribe-math = { workspace = true, optional = true }

# Readers (optional)
rescribe-read-markdown = { workspace = true, optional = true }
rescribe-read-html = { workspace = true, optional = true }
rescribe-read-latex = { workspace = true, optional = true }
rescribe-read-org = { workspace = true, optional = true }
rescribe-read-pdf = { workspace = true, optional = true }
rescribe-read-docx = { workspace = true, optional = true }
rescribe-read-ipynb = { workspace = true, optional = true }
rescribe-read-xlsx = { workspace = true, optional = true }
rescribe-read-epub = { workspace = true, optional = true }
rescribe-read-djot = { workspace = true, optional = true }
rescribe-read-opml = { workspace = true, optional = true }
rescribe-read-mediawiki = { workspace = true, optional = true }
rescribe-read-bibtex = { workspace = true, optional = true }
rescribe-read-csl-json = { workspace = true, optional = true }
rescribe-read-docbook = { workspace = true, optional = true }
rescribe-read-rst = { workspace = true, optional = true }
rescribe-read-asciidoc = { workspace = true, optional = true }
rescribe-read-typst = { workspace = true, optional = true }
rescribe-read-dokuwiki = { workspace = true, optional = true }
rescribe-read-jats = { workspace = true, optional = true }
rescribe-read-tei = { workspace = true, optional = true }
rescribe-read-man = { workspace = true, optional = true }
rescribe-read-jira = { workspace = true, optional = true }
rescribe-read-creole = { workspace = true, optional = true }
rescribe-read-textile = { workspace = true, optional = true }
rescribe-read-haddock = { workspace = true, optional = true }
rescribe-read-muse = { workspace = true, optional = true }
rescribe-read-t2t = { workspace = true, optional = true }
rescribe-read-rtf = { workspace = true, optional = true }
rescribe-read-vimwiki = { workspace = true, optional = true }
rescribe-read-zimwiki = { workspace = true, optional = true }
rescribe-read-pod = { workspace = true, optional = true }
rescribe-read-markua = { workspace = true, optional = true }
rescribe-read-fb2 = { workspace = true, optional = true }
rescribe-read-texinfo = { workspace = true, optional = true }
rescribe-read-tikiwiki = { workspace = true, optional = true }
rescribe-read-twiki = { workspace = true, optional = true }
rescribe-read-xwiki = { workspace = true, optional = true }
rescribe-read-bbcode = { workspace = true, optional = true }
rescribe-read-ansi = { workspace = true, optional = true }
rescribe-read-csv = { workspace = true, optional = true }
rescribe-read-tsv = { workspace = true, optional = true }
rescribe-read-native = { workspace = true, optional = true }
rescribe-read-odt = { workspace = true, optional = true }
rescribe-read-pptx = { workspace = true, optional = true }
rescribe-read-commonmark = { workspace = true, optional = true }
rescribe-read-gfm = { workspace = true, optional = true }
rescribe-read-ris = { workspace = true, optional = true }
rescribe-read-endnotexml = { workspace = true, optional = true }
rescribe-read-biblatex = { workspace = true, optional = true }
rescribe-read-markdown-strict = { workspace = true, optional = true }
rescribe-read-multimarkdown = { workspace = true, optional = true }
rescribe-read-fountain = { workspace = true, optional = true }
rescribe-read-pandoc-json = { workspace = true, optional = true }

# Writers (optional)
rescribe-write-markdown = { workspace = true, optional = true }
rescribe-write-html = { workspace = true, optional = true }
rescribe-write-latex = { workspace = true, optional = true }
rescribe-write-org = { workspace = true, optional = true }
rescribe-write-plaintext = { workspace = true, optional = true }
rescribe-write-docx = { workspace = true, optional = true }
rescribe-write-ipynb = { workspace = true, optional = true }
rescribe-write-epub = { workspace = true, optional = true }
rescribe-write-djot = { workspace = true, optional = true }
rescribe-write-opml = { workspace = true, optional = true }
rescribe-write-mediawiki = { workspace = true, optional = true }
rescribe-write-csl-json = { workspace = true, optional = true }
rescribe-write-docbook = { workspace = true, optional = true }
rescribe-write-rst = { workspace = true, optional = true }
rescribe-write-asciidoc = { workspace = true, optional = true }
rescribe-write-bibtex = { workspace = true, optional = true }
rescribe-write-typst = { workspace = true, optional = true }
rescribe-write-ansi = { workspace = true, optional = true }
rescribe-write-dokuwiki = { workspace = true, optional = true }
rescribe-write-jats = { workspace = true, optional = true }
rescribe-write-tei = { workspace = true, optional = true }
rescribe-write-man = { workspace = true, optional = true }
rescribe-write-jira = { workspace = true, optional = true }
rescribe-write-creole = { workspace = true, optional = true }
rescribe-write-textile = { workspace = true, optional = true }
rescribe-write-haddock = { workspace = true, optional = true }
rescribe-write-muse = { workspace = true, optional = true }
rescribe-write-t2t = { workspace = true, optional = true }
rescribe-write-rtf = { workspace = true, optional = true }
rescribe-write-vimwiki = { workspace = true, optional = true }
rescribe-write-zimwiki = { workspace = true, optional = true }
rescribe-write-pod = { workspace = true, optional = true }
rescribe-write-markua = { workspace = true, optional = true }
rescribe-write-fb2 = { workspace = true, optional = true }
rescribe-write-texinfo = { workspace = true, optional = true }
rescribe-write-tikiwiki = { workspace = true, optional = true }
rescribe-write-twiki = { workspace = true, optional = true }
rescribe-write-xwiki = { workspace = true, optional = true }
rescribe-write-revealjs = { workspace = true, optional = true }
rescribe-write-slidy = { workspace = true, optional = true }
rescribe-write-s5 = { workspace = true, optional = true }
rescribe-write-dzslides = { workspace = true, optional = true }
rescribe-write-bbcode = { workspace = true, optional = true }
rescribe-write-beamer = { workspace = true, optional = true }
rescribe-write-csv = { workspace = true, optional = true }
rescribe-write-context = { workspace = true, optional = true }
rescribe-write-ms = { workspace = true, optional = true }
rescribe-write-chunkedhtml = { workspace = true, optional = true }
rescribe-write-tsv = { workspace = true, optional = true }
rescribe-write-icml = { workspace = true, optional = true }
rescribe-write-slideous = { workspace = true, optional = true }
rescribe-write-odt = { workspace = true, optional = true }
rescribe-write-native = { workspace = true, optional = true }
rescribe-write-pptx = { workspace = true, optional = true }
rescribe-write-commonmark = { workspace = true, optional = true }
rescribe-write-gfm = { workspace = true, optional = true }
rescribe-write-ris = { workspace = true, optional = true }
rescribe-write-xlsx = { workspace = true, optional = true }
rescribe-write-endnotexml = { workspace = true, optional = true }
rescribe-write-biblatex = { workspace = true, optional = true }
rescribe-write-markdown-strict = { workspace = true, optional = true }
rescribe-write-multimarkdown = { workspace = true, optional = true }
rescribe-write-fountain = { workspace = true, optional = true }
rescribe-write-pandoc-json = { workspace = true, optional = true }

[dev-dependencies]
rescribe-read-markdown = { workspace = true }
rescribe-read-html = { workspace = true }
rescribe-write-markdown = { workspace = true }
rescribe-write-html = { workspace = true }
rescribe-std = { workspace = true }
