[package]
name = "djot-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Djot tokenizer, AST, and builder — no rescribe dependency"

[features]
default = ["ast", "streaming", "batch", "writer-streaming", "writer-builder"]
ast = []
streaming = ["ast"]
batch = []
writer-streaming = []
writer-builder = ["ast", "writer-streaming"]

[dependencies]

[dev-dependencies]
