[package]
name = "html-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML5 parser, AST, and emitter — no rescribe dependency"

[features]
default = ["reader-ast", "reader-streaming", "reader-batch", "writer-streaming", "writer-builder"]
reader-ast = []
reader-streaming = ["reader-ast"]
reader-batch = []
writer-streaming = []
writer-builder = ["reader-ast", "writer-streaming"]

[dependencies]
html5ever = "0.36"
markup5ever_rcdom = "0.36"

[dev-dependencies]
