[package]
name = "muse-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Muse parser, AST, and builder — no rescribe dependency"

[features]
default = ["reader-ast", "reader-streaming", "reader-batch", "writer-streaming", "writer-builder"]
reader-ast = []
reader-streaming = ["reader-ast"]
reader-batch = []
writer-streaming = []
writer-builder = ["reader-ast", "writer-streaming"]
