[package]
name = "ooxml-wml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WordprocessingML (DOCX) support for the ooxml library"
readme.workspace = true
keywords = ["docx", "ooxml", "word", "office", "document"]
categories = ["encoding", "parser-implementations"]

[features]
default = ["full"]
full = [
    "reader-ast",
    "reader-streaming",
    "reader-batch",
    "writer-streaming",
    "writer-builder",
    "wml-styling",
    "wml-tables",
    "wml-layout",
    "wml-hyperlinks",
    "wml-drawings",
    "wml-numbering",
    "wml-comments",
    "wml-fields",
    "wml-track-changes",
    "wml-settings",
    "wml-charts",
    "wml-math",
    "extra-attrs",
    "extra-children",
]
# API-mode flags
reader-ast = []       # Document::open / parse — materialised tree
reader-streaming = [] # events() — iterator over WmlEvents (stub; impl pending)
reader-batch = []     # StreamingParser<H> — chunk-driven (stub; impl pending)
writer-streaming = [] # Writer<W> — event-driven emit (stub; impl pending)
writer-builder = []   # DocumentBuilder — build and write a document
wml-styling = []
wml-tables = []
wml-layout = []
wml-hyperlinks = []
wml-drawings = []
wml-numbering = []
wml-comments = []
wml-fields = []
wml-track-changes = []
wml-settings = []
wml-math = ["dep:ooxml-omml"]
wml-charts = ["dep:ooxml-dml", "ooxml-dml/dml-charts"]
extra-attrs = []
extra-children = []

[dependencies]
ooxml-opc.workspace = true
ooxml-xml.workspace = true
ooxml-omml = { workspace = true, optional = true }
ooxml-dml = { workspace = true, optional = true }
quick-xml.workspace = true
thiserror.workspace = true
serde.workspace = true
base64.workspace = true

[dev-dependencies]
zip.workspace = true

[build-dependencies]
ooxml-codegen.workspace = true
