[package]
name = "rst-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "reStructuredText parser, AST, and builder — no rescribe dependency"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
