[package]
name = "rst-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "reStructuredText parser, AST, and builder — no rescribe dependency"

[features]
default = ["ast", "streaming", "batch", "writer-streaming", "writer-builder"]
ast = []
streaming = ["ast"]
batch = []
writer-streaming = []
writer-builder = ["ast", "writer-streaming"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
