[package]
name = "rescribe-read-ansi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ANSI terminal text reader for rescribe"

[dependencies]
ansi-fmt = { workspace = true }
rescribe-core = { workspace = true }
rescribe-std = { workspace = true }
